--- a/article.html
+++ b/article.html
@@ -3,8 +3,8 @@
 
 <head>
 
-    <title>忠安医联体医院运维</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <title>医联体医院运维</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
 
     <!-- <script src="./libs/jquery.min.js"></script> -->
@@ -77,7 +77,7 @@
 
             $.ajax({
                 type: 'get',
-                url: `/hospital/maintain/article/${rowPad.param.articleId}`,
+                url: `/ylt/hospital/maintain/article/${rowPad.param.articleId}`,
                 async: false,
                 data: { token: rowPad.param.token },
                 success: function (data) {
@@ -173,7 +173,7 @@
         rowAlter: function () {
             $.ajax({
                 type: 'post',
-                url: '/hospital/maintain/article-alter',
+                url: '/ylt/hospital/maintain/article-alter',
                 data: Object.assign({ token: rowPad.param.token, articleId: rowPad.param.articleId, content: tinyMCE.editors[0].getContent()}, rowPad.row),
                 success: function (data) {
                     if (data.codeMsg)
