--- a/ceshi.html
+++ b/ceshi.html
@@ -3,8 +3,8 @@
 
     <head>
 
-        <title>忠安医联体运维-添加广告</title>
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <title>医联体运维-添加广告</title>
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <!-- <script src="./libs/jquery.min.js"></script> -->
         <!-- <script src="./libs/jquery.cookie.js"></script> -->
         <script src="./libs/jquery-easyui-1.8.7/jquery.min.js"></script>
