--- a/doctor-manage.html
+++ b/doctor-manage.html
@@ -3,9 +3,9 @@
 
 <head>
 
-    <title>忠安医联体医院运维</title>
+    <title>医联体医院运维</title>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
 
     <!-- <script src="./libs/jquery.min.js"></script> -->
@@ -61,7 +61,7 @@
             token: null
         },
         queryParam: {
-            hospitalId:logining.hospital.hospitalId,
+            hospitalId:logining.hospitalId,
             del:0
         },
         beforePage: function () {
@@ -138,7 +138,7 @@
                     param.pn = param.page;
                     Object.assign(param, rowsPad.queryParam);
                     $.ajax({
-                        url: '/hospital/maintain/doctors',
+                        url: '/ylt/hospital/maintain/doctors',
                         type: 'get',
                         data: param,
                         success: function (data) {
@@ -223,7 +223,7 @@
             if (doDel) {
                 $.ajax({
                     type: 'post',
-                    url: `/hospital/maintain/doctor-delete`,
+                    url: `/ylt/hospital/maintain/doctor-delete`,
                     data: { token: rowsPad.param.token, doctorId: doctorIdsSplit },
                     success: function (data) {
                         if (data.codeMsg)
@@ -272,7 +272,7 @@
             if (doDel) {
                 $.ajax({
                     type: 'post',
-                    url: `/hospital/maintain/doctors-delete`,
+                    url: `/ylt/hospital/maintain/doctors-delete`,
                     data: Object.assign({ token: rowsPad.param.token,password:password },rowsPad.queryParam),
                     success: function (data) {
                         if (data.codeMsg)
@@ -351,7 +351,7 @@
                 param.pn = param.page;
                 param.hospitalId=rowsPad.queryParam.hospitalId;
                 $.ajax({
-                    url: '/hospital/maintain/offices',
+                    url: '/ylt/hospital/maintain/offices',
                     type: 'get',
                     data: param,
                     success: function (data) {
