--- a/login.html
+++ b/login.html
@@ -3,10 +3,10 @@
 
 <head>
 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>忠安医联体医院运维</title>
+    <title>医联体医院运维</title>
     <script src="./libs/common.js"></script>
     <link rel="stylesheet" href="./libs/common.css" />
     <script src="./login/login.js"></script>
@@ -23,7 +23,7 @@
     <div style="margin-bottom:5%;"></div>
     <div class="logo smargin">
         <img src="./favicon.ico" alt="" />
-        <h2>忠安医联体-医院运维</h2>
+        <h2>医联体-医院运维</h2>
     </div>
 
     <div id="loginPad">
@@ -82,12 +82,12 @@
 
 
         $.ajax({
-            url: '/hospital/login-refresh',
+            url: '/ylt/login-refresh',
             type: 'post',
             async: false,
             success: function (data) {
                 if (data.code == 0) {
-                    $.cookie('hospitalLogin', JSON.stringify(data.data), { expires: 365, path: '/' });
+                    $.cookie('hospitalLogin', JSON.stringify(data.data), { expires: 365, path: '/ylt' });
                     location.href = './index.html';
                 }
             }
@@ -98,7 +98,7 @@
         var account = $('.phone input').val();
         var password = $('.password input').val();
         $.ajax({
-            url: '/hospital/login',
+            url: '/ylt/login',
             data: { account: account, password: password },
             type: 'post',
             async: false,
@@ -108,7 +108,7 @@
                 if (data.code == 0) {
                     $('#message').fadeIn(100).fadeOut(1500).find('[name=content]').text('成功');
                     $.ajax({
-                        url: '/hospital/login-refresh',
+                        url: '/ylt/login-refresh',
                         type: 'post',
                         async: false,
                         success: function (data) {
