--- a/patient-manage.html
+++ b/patient-manage.html
@@ -3,9 +3,9 @@
 
 <head>
 
-    <title>忠安医联体医院运维</title>
+    <title>医联体医院运维</title>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
 
     <!-- <script src="./libs/jquery.min.js"></script> -->
@@ -163,7 +163,7 @@
                     param.pn = param.page;
                     Object.assign(param, rowsPad.queryParam);
                     $.ajax({
-                        url: '/hospital/maintain/patients',
+                        url: '/ylt/hospital/maintain/patients',
                         type: 'get',
                         data: param,
                         success: function (data) {
@@ -247,7 +247,7 @@
             if (doDel) {
                 $.ajax({
                     type: 'post',
-                    url: `/hospital/maintain/patient-delete`,
+                    url: `/ylt/hospital/maintain/patient-delete`,
                     data: { token: rowsPad.param.token, patientId: patientIdsSplit },
                     success: function (data) {
                         if (data.codeMsg)
@@ -295,7 +295,7 @@
             if (doDel) {
                 $.ajax({
                     type: 'post',
-                    url: `/hospital/maintain/patients-delete`,
+                    url: `/ylt/hospital/maintain/patients-delete`,
                     data: Object.assign({ token: rowsPad.param.token, password: password },rowsPad.queryParam),
                     success: function (data) {
                         if (data.codeMsg)
