--- a/hospital-ad-add.html
+++ b/hospital-ad-add.html
@@ -3,8 +3,8 @@
 
 <head>
 
-    <title>忠安医联体运维-添加广告</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <title>医联体运维-添加广告</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
 
     <!-- <script src="./libs/jquery.min.js"></script> -->
@@ -83,8 +83,8 @@
 
             rowPad.contentKindEditor = KindEditor.create('#rowPad [name=content]', {
                 cssPath: './libs/kindeditor/plugins/code/prettify.css',
-                uploadJson: '/kindeditor/upload_json.jsp',
-                fileManagerJson: '/kindeditor/file_manager_json.jsp',
+                uploadJson: '/ylt/kindeditor/upload_json.jsp',
+                fileManagerJson: '/ylt/kindeditor/file_manager_json.jsp',
                 allowFileManager: true,
                 afterCreate: function () {
                     var self = this;
@@ -102,7 +102,7 @@
         rowAdd: function () {
             $.ajax({
                 type: 'post',
-                url: '/hospital/maintain/hospital-ad-add',
+                url: '/ylt/hospital/maintain/hospital-ad-add',
                 data: Object.assign({content: rowPad.contentKindEditor.html()},rowPad.row),
                 success: function (data) {
                     if (data.codeMsg)
@@ -374,7 +374,7 @@
                                     param.ps = param.rows;
                                     param.pn = param.page;
                                     $.ajax({
-                                        url: '/hospital/maintain/articles',
+                                        url: '/ylt/hospital/maintain/articles',
                                         type: 'get',
                                         data: param,
                                         success: function (data) {
@@ -420,7 +420,7 @@
 						                param.ps = param.rows;
 						                param.pn = param.page;
 						                $.ajax({
-						                    url: '/hospital/maintain/activities',
+						                    url: '/ylt/hospital/maintain/activities',
 						                    type: 'get',
 						                    data: param,
 						                    success: function (data) {
@@ -466,7 +466,7 @@
 						                param.ps = param.rows;
 						                param.pn = param.page;
 						                $.ajax({
-						                    url: '/hospital/maintain/projects',
+						                    url: '/ylt/hospital/maintain/projects',
 						                    type: 'get',
 						                    data: param,
 						                    success: function (data) {
