--- a/hospital-ad.html
+++ b/hospital-ad.html
@@ -3,8 +3,8 @@
 
 <head>
 
-    <title>忠安医联体运维-查看广告</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <title>医联体运维-查看广告</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <!-- <script src="./libs/jquery.min.js"></script> -->
     <!-- <script src="./libs/jquery.cookie.js"></script> -->
     <script src="./libs/jquery-easyui-1.8.7/jquery.min.js"></script>
@@ -74,7 +74,7 @@
 
             $.ajax({
                 type: 'get',
-                url: `/hospital/maintain/hospital-ad/${rowPad.param.hospitalAdId}`,
+                url: `/ylt/hospital/maintain/hospital-ad/${rowPad.param.hospitalAdId}`,
                 async: false,
                 data: { token: rowPad.param.token },
                 success: function (data) {
@@ -93,8 +93,8 @@
 
             rowPad.contentKindEditor = KindEditor.create('#rowPad [name=content]', {
                 cssPath: './libs/kindeditor/plugins/code/prettify.css',
-                uploadJson: '/kindeditor/upload_json.jsp',
-                fileManagerJson: '/kindeditor/file_manager_json.jsp',
+                uploadJson: '/ylt/kindeditor/upload_json.jsp',
+                fileManagerJson: '/ylt/kindeditor/file_manager_json.jsp',
                 allowFileManager: true,
                 afterCreate: function () {
                     var self = this;
@@ -119,7 +119,7 @@
         rowAlter: function () {
             $.ajax({
                 type: 'post',
-                url: '/hospital/maintain/hospital-ad-alter',
+                url: '/ylt/hospital/maintain/hospital-ad-alter',
                 data: Object.assign({  hospitalAdId: rowPad.param.hospitalAdId, content: rowPad.contentKindEditor.html()},rowPad.row),
                 success: function (data) {
                     if (data.codeMsg)
@@ -398,7 +398,7 @@
                                     param.ps = param.rows;
                                     param.pn = param.page;
                                     $.ajax({
-                                        url: '/hospital/maintain/articles',
+                                        url: '/ylt/hospital/maintain/articles',
                                         type: 'get',
                                         data: param,
                                         success: function (data) {
