--- a/hospitalEdit.html
+++ b/hospitalEdit.html
@@ -3,8 +3,8 @@
 
 <head>
 
-    <title>忠安医联体运维-查看广告</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <title>医联体运维-查看广告</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
 
     <!-- <script src="./libs/jquery.min.js"></script> -->
@@ -91,7 +91,7 @@
 
             $.ajax({
                 type: 'get',
-                url: '/hospital/def/maintain/hospital-info',
+                url: '/ylt/hospital/maintain/hospital-info',
                 async: false,
                 data: '',
                 success: function (data) {
@@ -158,8 +158,8 @@
 
             rowPad.contentKindEditor = KindEditor.create('#rowPad [name=content]', {
                 cssPath: './libs/kindeditor/plugins/code/prettify.css',
-                uploadJson: '/kindeditor/upload_json.jsp',
-                fileManagerJson: '/kindeditor/file_manager_json.jsp',
+                uploadJson: '/ylt/kindeditor/upload_json.jsp',
+                fileManagerJson: '/ylt/kindeditor/file_manager_json.jsp',
                 allowFileManager: true,
                 afterCreate: function () {
                     var self = this;
@@ -184,7 +184,7 @@
         rowAlter: function () {
             $.ajax({
                 type: 'post',
-                url: '/hospital/def/maintain/update-hospital-info',
+                url: '/ylt/hospital/maintain/update-hospital-info',
                 data: Object.assign({ 
                     cover: rowPad.row.cover,
                     intro: rowPad.row.intro,
