--- a/office.html
+++ b/office.html
@@ -3,8 +3,8 @@
 
 <head>
 
-    <title>忠安医联体医院运维</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <title>医联体医院运维</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
 
     <!-- <script src="./libs/jquery.min.js"></script> -->
@@ -76,7 +76,7 @@
 
             $.ajax({
                 type: 'get',
-                url: `/hospital/maintain/office/${rowPad.param.officeId}`,
+                url: `/ylt/hospital/maintain/office/${rowPad.param.officeId}`,
                 async: false,
                 data: { token: rowPad.param.token },
                 success: function (data) {
@@ -95,8 +95,8 @@
 
             rowPad.contentKindEditor = KindEditor.create('#rowPad [name=content]', {
                 cssPath: './libs/kindeditor/plugins/code/prettify.css',
-                uploadJson: '/kindeditor/upload_json.jsp',
-                fileManagerJson: '/kindeditor/file_manager_json.jsp',
+                uploadJson: '/ylt/kindeditor/upload_json.jsp',
+                fileManagerJson: '/ylt/kindeditor/file_manager_json.jsp',
                 allowFileManager: true,
                 afterCreate: function () {
                     var self = this;
@@ -120,7 +120,7 @@
         rowAlter: function () {
             $.ajax({
                 type: 'post',
-                url: '/hospital/maintain/office-alter',
+                url: '/ylt/hospital/maintain/office-alter',
                 data: Object.assign({ token: rowPad.param.token, officeId: rowPad.param.officeId, content: rowPad.contentKindEditor.html() }, rowPad.row),
                 success: function (data) {
                     if (data.codeMsg)
