--- a/overview.html
+++ b/overview.html
@@ -4,10 +4,10 @@
 <head lang="en">
 
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <title>忠安医联体运维-概览</title>
+    <title>医联体运维-概览</title>
     <!-- <script src="/libs/jquery.min.js"></script> -->
     <script src="./libs/jquery-easyui-1.8.7/jquery.min.js"></script>
     <!-- <script src="/libs/jquery.cookie.js"></script> -->
@@ -38,7 +38,7 @@
 </body>
 
 <script>
-   $.get('/hospital/maintain/overview',function(data){
+   $.get('/ylt/hospital/maintain/overview',function(data){
     $('#patientCountOfOneDayRecently').text(data.data.patientCountOfOneDayRecently)
     $('#patientCountOfOneWeekRecently').text(data.data.patientCountOfOneWeekRecently)
     $('#patientCountOfHistory').text(data.data.patientCountOfHistory)
