--- a/project-manage.html
+++ b/project-manage.html
@@ -3,9 +3,9 @@
 
 <head>
 
-    <title>忠安医联体医院运维</title>
+    <title>医联体医院运维</title>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
 
     <!-- <script src="./libs/jquery.min.js"></script> -->
@@ -131,7 +131,7 @@
                     param.pn = param.page;
                     Object.assign(param, rowsPad.queryParam);
                     $.ajax({
-                        url: '/hospital/maintain/projects',
+                        url: '/ylt/hospital/maintain/projects',
                         type: 'get',
                         data: param,
                         success: function (data) {
@@ -214,7 +214,7 @@
             if (doDel) {
                 $.ajax({
                     type: 'post',
-                    url: `/hospital/maintain/project-delete`,
+                    url: `/ylt/hospital/maintain/project-delete`,
                     data: { token: rowsPad.param.token, projectId: projectIdsSplit },
                     success: function (data) {
                         if (data.codeMsg)
@@ -262,7 +262,7 @@
             if (doDel) {
                 $.ajax({
                     type: 'post',
-                    url: `/hospital/maintain/projects-delete`,
+                    url: `/ylt/hospital/maintain/projects-delete`,
                     data: Object.assign({ token: rowsPad.param.token, password: password },rowsPad.queryParam),
                     success: function (data) {
                         if (data.codeMsg)
