--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>医联体医院运维</title>
+    <title>医院运维 - 医联体</title>
     <script src="libs/common.js"></script>
     <link rel="stylesheet" href="./libs/common.css" />
     <script src="./index/index.js"></script>
@@ -47,8 +47,8 @@
         </style>
         <div data-options="region:'north'" style="height:80px">
             <div style="margin-top:18px;">
-                <span style="padding-left:10px;font-size: 26px;font-weight: 700;">忠安医疗</span>
-                <span style="padding-left:10px;font-size: 22px;">医联体-医院运维（<span class="hospitalName"></span>）</span>
+                <span style="padding-left:10px;font-size: 26px;font-weight: 700;">医联体 - 医院运维</span>
+                <span style="padding-left:10px;font-size: 22px;">（<span class="hospitalName"></span>）</span>
             </div>
         </div>
         <div data-options="region:'west',split:true" title=" " style="width:200px;">
