--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>医联体医院运维</title>
+    <title>登录 - 医院运维 - 医联体</title>
     <script src="./libs/common.js"></script>
     <link rel="stylesheet" href="./libs/common.css" />
     <script src="./login/login.js"></script>
@@ -23,7 +23,7 @@
     <div style="margin-bottom:5%;"></div>
     <div class="logo smargin">
         <img src="./favicon.ico" alt="" />
-        <h2>医联体-医院运维</h2>
+        <h2>医联体 - 医院运维</h2>
     </div>
 
     <div id="loginPad">
@@ -51,7 +51,7 @@
         <div class="loginbtn" style="margin-top:20px;">
             <button name="login" onclick="login()">登录</button>
             <div style="text-align: right;">
-            <a href="/maintain">平台运维入口</a>
+            <a href="/ylt/index.html">主页</a>
         </div>
         </div>
     </div>
